Export a RemoteMySQL, y cambios en registro

--- a/.env
+++ b/.env
@@ -29,5 +29,7 @@ APP_SECRET=7ca781a2dd7c7a0876ec3f28b277ec46
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
-DATABASE_URL="mysql://admin:admin@127.0.0.1:3306/zgaming?serverVersion=mariadb-10.4.11"
+# DATABASE_URL="mysql://admin:admin@127.0.0.1:3306/zgaming?serverVersion=mariadb-10.4.11"
+DATABASE_URL="mysql://msoXUOhlae:LVr4SCOkrt@remotemysql.com:3306/msoXUOhlae?serverVersion=mariadb-10.4.11"
+# DATABASE_URL="mysql://f6TJG4bSWI:wD2Zcc42kL@remotemysql.com:3306/f6TJG4bSWI?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
