--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,10 +32,12 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+          - { path: ^/, roles: [IS_AUTHENTICATED_ANONYMOUSLY, ROLE_USER, ROLE_ADMIN] }
           - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-          - { path: ^/producto, roles: ROLE_USER }
-          - { path: ^/registro  , roles: ROLE_USER }
-          - { path: ^/pedido  , roles: ROLE_USER }
+          - { path: ^/registro, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+          - { path: ^/producto, roles: ROLE_ADMIN }
+          - { path: ^/registro  , roles: ROLE_ADMIN }
+          - { path: ^/pedido  , roles: ROLE_ADMIN }
 
 when@test:
     security:
